<resources>
    <string name="app_name" translatable="false">Sendo</string>
    <string name="txt_BTN_Save">Guardar</string>
    <string name="txt_BTN_Cancel">Cancelar</string>
    <string name="txt_BTN_Create">Crear</string>
    <string name="txt_BTN_Finish">Finalizar</string>
    <string name="hint_ET_Mail">Correo</string>
    <string name="hint_ET_Password">Contraseña</string>
    <string name="txt_BTN_Login">Iniciar Sesión</string>
    <string name="txt_BTN_Signup">Registrarse</string>
    <string name="txt_TV_recover_password">¿Olvidaste tu contraseña?</string>
    <string name="txt_TV_options">o conéctate con</string>
    <string name="txt_ConfirmPassword">Confirmar contraseña</string>
    <string name="txt_TV_NewGuide">Nueva Guía</string>
    <string name="txt_TV_EditGuide">Editar Guía</string>
    <string name="hint_ET_Topic">p. ej: </string>
    <string name="txt_TV_Category">Categoría</string>
    <string name="txt_TV_Topic">Tema</string>
    <string name="txt_TV_DateTime">Fecha y Hora</string>
    <string name="txt_TV_FStats_TV_Title">Aquí están tus estadísticas</string>
    <string name="txt_TV_FStats_TV_Hint">Mira el resumen de las estadísticas de tu sesión de estudio.</string>
    <string name="txt_TV_FStats_TV_Stars_Hint">Estrellas ganadas</string>
    <string name="txt_TV_FStats_TV_Ommited_Hint">Preguntas omitidas</string>
    <string name="txt_fragment_guides_title">Tus guías</string>
    <string name="description_permission">Necesitamos de algunos permisos para que puedas acceder a todas las caracteristícas</string>
    <string name="txt_BTN_Skip">Omitir</string>
    <string name="txt_BTN_Next">Siguiente</string>
    <string name="txt_BTN_Back">Regresar</string>
    <string name="txt_BTN_Start">Comenzar</string>
    <string name="txt_BTN_Done">Listo</string>
    <string name="txt_BTN_Import">Importar</string>
    <string name="title_photo_first_configuration">Los reflectores son tuyos</string>
    <string name="description_photo_first_configuration">Puedes elegir una foto o cambiarla en el\nmomento que quieras.</string>
    <string name="hint_name_edittext">Alejandra Montes…</string>
    <string name="title_name_first_configuration">Elige un nombre para que\nlas personas te vean</string>
    <string name="description_name_first_configuration">Puedes dejar el nombre de tus redes\no cambiarlo.</string>
    <string name="hint_birthday_edittext">Sí naciste, ¿verdad?…</string>
    <string name="title_birthday_first_configuration">¿Cuándo naciste?</string>
    <string name="description_birthday_first_configuration">Los cumpleaños son muy especiales para nosotros.</string>
    <string name="hint_school_edittext">Elige un nivel</string>
    <string name="title_school_first_configuration">¿En qué nivel de estudios\nte encuentras?</string>
    <string name="title_appblock_first_configuration">Elige las apps que más usas\ny te distraen cuando estudias</string>
    <string name="description_appblock_first_configuration">Puedes elegirlas o cambiarlas cuando\nquieras.</string>
    <string name="title_done_first_configuration">¡Perfecto!</string>
    <string name="description_done_first_configuration">Ahora estás listo para utilizar la app,\ny no olvides que:\n¡Esto es Sciooooo!</string>
    <string name="title_incomplete_first_configuration">Aún no terminas</string>
    <string name="description_incomplete_first_configuration">Por favor llena tus datos para\npoder usar la aplicación.</string>
    <string name="txt_activity_mail_title">Verificar tu cuenta</string>
    <string name="txt_activity_mail_verify">Te enviamos un correo para que verifiques tu cuenta, revisa tu bandeja de entrada o spam</string>
    <string name="txt_activity_mail_resend">Si no recibiste el correo da clic en el botón Reenviar</string>
    <string name="txt_activity_mail_swipe">Actualiza deslizando hacia abajo</string>
    <string name="txt_BTN_Logout">Cerrar sesión</string>
    <string name="txt_BTN_Resend">Reenviar</string>
    <string name="txt_Answer_True">Verdadero</string>
    <string name="txt_Answer_False">Falso</string>
    <string name="txt_BTN_Answer">Contestar</string>
    <string name="txt_hint_ET_Answer">Escribe tu respuesta aquí...</string>
    <string name="txt_title_TV_Answer">Respuesta:</string>
    <string name="txt_title_TV_Options">Opciones:</string>
    <string name="txt_hint_TV_Options">Escribe y activa las respuestas que son correctas.</string>
    <string name="txt_days_left">Faltan %1$d días</string>
    <string name="education_title_default">Elige una opción</string>
    <string name="education_title_elementary">Primaria</string>
    <string name="education_title_secondary_school">Secundaria</string>
    <string name="education_title_high_school">Bachillerato</string>
    <string name="education_title_college">Universidad</string>
    <string name="education_title_master">Maestría</string>
    <string name="education_title_doctoral">Doctorado</string>
    <string name="education_description_swipe">Desliza para más opciones</string>
    <string name="error_mail">Parece que hubo un problema al intentar iniciar sesión.</string>
    <string name="error_facebook">Parece que hubo un problema al intentar iniciar sesión con Facebook.</string>
    <string name="error_google">Parece que hubo un problema al intentar iniciar sesión con Google.</string>
    <string name="category_art">Arte</string>
    <string name="category_exact_sciences">Exactas</string>
    <string name="category_social_sciences">Sociales</string>
    <string name="category_sports">Deportes</string>
    <string name="category_entertainment">Entretenimiento</string>
    <string name="category_tech">Tecnología</string>
    <string name="category_others">Otros</string>
    <string name="month_january">Enero</string>
    <string name="month_february">Febrero</string>
    <string name="month_march">Marzo</string>
    <string name="month_april">Abril</string>
    <string name="month_may">Mayo</string>
    <string name="month_june">Junio</string>
    <string name="month_july">Julio</string>
    <string name="month_august">Agosto</string>
    <string name="month_september">Septiembre</string>
    <string name="month_october">Octubre</string>
    <string name="month_november">Noviembre</string>
    <string name="month_december">Diciembre</string>
    <string name="message_error">Parece que hubo un error\nLe he fallado, señor...\nusted confió en mi y yo le fallé.</string>
    <string name="message_emptyfields_error">¡Alto ahí, vaquero!\nNo puedes dejar campos vacíos.</string>
    <string name="message_connection_error">Parece que no tienes conexión.</string>
    <string name="message_max_apps_reached_error">Sólo puedes elegir 3 aplicaciones.\nConviertete en PREMIUM y podrás elegir cuantas aplicaciones quieras.</string>
    <string name="message_from_the_future_error">Tranquilo, Marty\nNo es posible que vengas\ndel futuro.</string>
    <string name="message_save_error">Hubo un error al intentar guardar.\n:(</string>
    <string name="message_set_photo_error">Hubo un error al intentar\nguardar la foto.\n:(</string>
    <string name="message_invalid_name">Escribe un nombre válido</string>
    <string name="message_invalid_password">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="message_match_password_error">Las contraseñas no coinciden.</string>
    <string name="message_rejected_email">El correo no es válido o ya existe.</string>
    <string name="message_login_success">Bienvenido\nTe enviamos un correo de confirmación a tu email.</string>
    <string name="message_save_success">Todo bien, todo correcto.</string>
    <string name="message_set_photo_success">¡No puede ser!\n¡Yo te ví en una pelicula!</string>
    <string name="message_save_question_success">Listo, tu pregunta se creó.</string>
    <string name="message_save_question_error">No se pudo crear la pregunta.</string>
    <string name="message_unselected_answer_warning">Elige al menos una respesta correcta.</string>
    <string name="message_signup_loading">Espera un momento en lo que comprobamos que no eres un robot del futuro enviado para destruir a la raza humana :)</string>
    <string name="navbar_title_home">Inicio</string>
    <string name="navbar_title_create">Crear</string>
    <string name="navbar_title_guides">Guías</string>
    <string name="navmenu_title_account">Cuenta</string>
    <string name="navmenu_title_settings">Ajustes</string>
    <string name="navmenu_title_security">Seguridad</string>
    <string name="navmenu_title_apps">Aplicaciones</string>
    <string name="navmenu_title_opensource" translatable="false">Open Source</string>
    <string name="navmenu_title_about">Acerca de Scio</string>
    <string name="navmenu_title_logout">Cerrar sesión</string>
    <string name="facebook_app_id" translatable="false">342632009679209</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb342632009679209</string>
    <string name="txt_add_question_option_menu_guide">Agregar</string>
    <string name="txt_edit_question_option_menu_guide">Editar</string>
    <string name="txt_delete_question_option_menu_guide">Eliminar</string>
    <string name="txt_share_guide_option_menu_guide">Compartir</string>
    <string name="txt_edit_guide_option_menu_guide">Editar</string>
    <string name="txt_delete_guide_option_menu_guide">Eliminar</string>
    <string name="txt_study_guide_option_menu_guide">Estudiar</string>
    <string name="txt_question_options_menu_title_guide">Preguntas:</string>
    <string name="txt_guide_options_menu_title_guide">Guía:</string>
    <string name="txt_title_fragment_new_question">Nueva Pregunta</string>
    <string name="txt_hint_fragment_new_question">Elige el tipo de pregunta qué quieres crear.</string>
    <string name="txt_title_question_type_multiple_choice">Opción multiple</string>
    <string name="txt_title_question_type_true_false">V o F</string>
    <string name="txt_title_question_type_open_answer">Pregunta Abierta</string>
    <string name="txt_title_question">Pregunta</string>
    <string name="txt_ET_question_hint">Escribe la pregunta aquí</string>
    <string name="txt_ET_answer_hint">Escribe la respuesta aquí</string>
    <string name="txt_ET_option_hint">Escribe la opción aquí</string>
    <string name="txt_hint_answer">Elige la respuesta correcta.</string>
    <string name="txt_title_answer">Respuesta</string>
    <string name="txt_import_guide_dialog_title">Importar Guía</string>
    <string name="txt_activity_signup_title">Crea tu cuenta</string>
    <string name="txt_textview_mail_title">Correo</string>
    <string name="txt_edittext_mail_hint">Teclea tu correo</string>
    <string name="txt_textview_password_title">Contreseña</string>
    <string name="txt_edittext_password_hint">Teclea tu contraseña</string>
    <string name="txt_textview_confirm_password_title">Confirmar Contraseña</string>
    <string name="txt_edittext_confirm_password_hint">Vuelve a teclear tu contraseña</string>
    <string name="txt_textview_notice_terms">Al crear tu cuenta aceptas nuestros terminos y condiciones, y el aviso de privacidad</string>
    <string name="current_question_total_questions" translatable="false">%1$d/%2$d</string>
    <string name="NETWORK_PHONE_TITLE">Error de conexión</string>
    <string name="NETWORK_PHONE_MESSAGE">Para continuar se necesita conexión a internet.</string>
    <string name="NETWORK_FIREBASE_TITLE">Error de conexión</string>
    <string name="NETWORK_FIREBASE_MESSAGE">Los servidores no están disponibles en éste momento.</string>
    <string name="AUTH_INVALID_CREDENTIALS_TITLE">Error de Autenticación</string>
    <string name="AUTH_INVALID_CREDENTIALS_MESSAGE">El usuario no está registrado o las credenciales son incorrectas.</string>
    <string name="AUTH_SEND_MAIL_TITLE">Error de Autenticación</string>
    <string name="AUTH_SEND_MAIL_MESSAGE">No se pudo enviar el correo, reintente más tarde.</string>
</resources>