<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".old.view.NewOpenAnswerQuestionFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        android:padding="@dimen/activity_padding"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/FNewOpenQuestion_TV_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_fragment_new_question"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            style="@style/titleTextView"
            />
        <!-- ========================================================================== Pregunta -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/FNewOpenQuestion_TV_Title_Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_question"
            android:layout_marginTop="@dimen/space_2"

            app:layout_constraintTop_toBottomOf="@id/FNewOpenQuestion_TV_Title"
            app:layout_constraintLeft_toLeftOf="parent"

            style="@style/normalTextView"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/FNewOpenQuestion_ET_Question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_ET_question_hint"

            app:layout_constraintTop_toBottomOf="@id/FNewOpenQuestion_TV_Title_Question"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            style="@style/EditText_Normal"
            />

        <!-- ========================================================================= Respuesta -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/FNewOpenQuestion_TV_Title_Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_TV_Answer"
            android:layout_marginTop="@dimen/space_2"

            app:layout_constraintTop_toBottomOf="@id/FNewOpenQuestion_ET_Question"
            app:layout_constraintLeft_toLeftOf="parent"

            style="@style/normalTextView"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/FNewOpenQuestion_ET_Answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txt_ET_answer_hint"

            app:layout_constraintTop_toBottomOf="@id/FNewOpenQuestion_TV_Title_Answer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            style="@style/EditText_Normal"
            />

        <!-- =========================================================================== Botones -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/FNewOpenQuestion_BTN_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_BTN_Cancel"
            android:layout_marginEnd="@dimen/space_2"

            app:layout_constraintTop_toTopOf="@id/FNewOpenQuestion_BTN_Create"
            app:layout_constraintRight_toLeftOf="@id/FNewOpenQuestion_BTN_Create"
            app:layout_constraintBottom_toBottomOf="@id/FNewOpenQuestion_BTN_Create"

            style="@style/cancelButton"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/FNewOpenQuestion_BTN_Create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_BTN_Create"
            android:layout_marginTop="@dimen/space_3"

            app:layout_constraintTop_toBottomOf="@id/FNewOpenQuestion_ET_Answer"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            style="@style/normalButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>