<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:padding="@dimen/activity_padding"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/first_configuration_img_size"
        android:tint="@color/colorOrangeDark"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:srcCompat="@drawable/img_name_card" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/FirstConfiguration_Title"
        android:text="@string/title_name_first_configuration"
        android:layout_marginBottom="@dimen/space_2"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/TV_Description"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/TV_Description"
        style="@style/FirstConfiguration_Description"
        android:text="@string/description_name_first_configuration"
        android:layout_marginBottom="@dimen/space_3"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/txtName"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/txtName"
        style="@style/FirstConfiguration_EditText"
        android:layout_marginTop="@dimen/space_3"
        android:hint="@string/hint_name_edittext"
        android:textColor="@color/colorOrange"
        android:textColorHint="@color/colorOrange"
        android:editable="true"
        android:inputType="textCapSentences"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>